--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,8 +4,8 @@ output_dir: _book
 delete_merged_file: true
 language:
   label:
-    fig: "FIGURE "
-    tab: "TABLE "
+    fig: "FIGUR "
+    tab: "TABELL "
   ui:
     edit: "Edit"
-chapter_name: "Chapter "
+chapter_name: "Kapitel "
