changed to htmal

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,11 +1,11 @@
-rmd_files: ["index.rmd", "prolog.rmd", "beroende.rmd", "bipolar.rmd", "neurofysiologi.rmd", "neuroendokrinologi.rmd", "psykofarmakologi.rmd", "beteende.rmd", "kbt.rmd", "epilog.rmd", "ordlista.rmd", "referenser.rmd"]
+rmd_files: ["index.rmd", "prolog.rmd", "beroende.rmd", "bipolar.rmd", "neurofysiologi.rmd", "neuroendokrinologi.rmd", "psykofarmakologi.rmd", "beteende.rmd", "kbt.rmd", "epilog.rmd", "ordlista.rmd"]
 book_filename: psykiatriboken
-output_dir: _book
+output_dir: docs
 delete_merged_file: true
 language:
   label:
-    fig: "FIGUR "
-    tab: "TABELL "
+    fig: "Figur "
+    tab: "Tabell "
   ui:
     edit: "Edit"
 chapter_name: "Kapitel "
